--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,31 +1,55 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #424242;
-  max-width: 960px;
-  padding: 16px;
+.search-form {
+  height: 60px;
+  background-color: aquamarine;
+  display: flex;
+ justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+
+  input {
+    height: 60%;
+    margin-right: 10px;
+  }
+
+  button {
+    height: 60%;
+  }
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #009688;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
-}
+.gallery {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  .photo-card {
+    // border: 1px solid black;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    margin: 5px;
+    width: 23%;
 
-.example .background {
-  height: 240px;
-  // Путь к изображениям из SASS-файла всегда такой, как из папки css
-  background-image: url('../images/demo.jpg');
-  background-size: cover;
-  background-position: center;
-}
+    img {
+      width: 100%;
+      background-size: cover;
+    }
+  }
 
-// .hidden {
-//   display: none;
-// }
+  .info {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    .info-item {
+      width: 25%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      b {
+        display: flex;
+        justify-content: center;
+      }
+    }
+  }
+}
