--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,6 +1,11 @@
+a {
+  text-decoration: none;
+  text-decoration-color: black;
+}
+
 .search-form {
   height: 60px;
-  background-color: aquamarine;
+  background-color: #013cfc;
   display: flex;
  justify-content: center;
   margin-left: auto;
@@ -18,27 +23,40 @@
 }
 
 .gallery {
+    text-decoration: none;
   width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+
   .photo-card {
     // border: 1px solid black;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
     margin: 5px;
     width: 23%;
 
+    a {
+      text-decoration: none;
+    }
+
     img {
       width: 100%;
+      height: 70%;
       background-size: cover;
     }
+  }
+
+  .photo-card:hover,
+  .photo-card:focus {
+        box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.5);
   }
 
   .info {
     width: 100%;
     display: flex;
     justify-content: center;
+      text-decoration: none;
 
     .info-item {
       width: 25%;
@@ -51,5 +69,33 @@
         justify-content: center;
       }
     }
+  }
+}
+
+.hidden {
+  display: none;
+}
+
+.load-more {
+  display: none;
+  justify-content: center;
+  padding: 10px 20px 10px 20px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 0px;
+  border-radius: 5px;
+  transition-property: background-color;
+  transition-duration: 300ms;
+  transition-timing-function: linear;
+  background-color: #013cfc;
+  color: white;
+  text-align: center;
+  vertical-align: middle;
+
+  &:focus,
+  &:hover {
+    background-color: #052db1;
+    cursor: pointer;
   }
 }
