--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -63,6 +63,7 @@ a {
       display: flex;
       flex-direction: column;
       justify-content: center;
+      align-items: center;
 
       b {
         display: flex;
